@@ -1,7 +1,11 @@
 What's New in IDLE 1.0.4?
 =========================
 
-*Release date: XX-XXX-2004*
+*Release date: XX-Dec-2004*
+
+- The GUI was hanging if the shell window was closed while a raw_input() 
+  was pending.  Restored the quit() of the readline() mainloop().
+  http://mail.python.org/pipermail/idle-dev/2004-December/002307.html
 
 - Added a Tk error dialog to run.py inform the user if the subprocess can't
   connect to the user GUI process.  Added a timeout to the GUI's listening
